# django-practice

./: README.md  db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
polls/: admin.py  models.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html
